@@ -9,6 +9,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import ru.itgroup.intouch.dto.CommentDto;
 
+import ru.itgroup.intouch.mapper.MapperToCommentDto;
 import ru.itgroup.intouch.repository.CommentRepository;
 
 import ru.itgroup.intouch.service.enums.Item;
@@ -25,7 +26,7 @@ import java.util.stream.Collectors;
 public class CommentService {
 
     private final CommentRepository commentRepository;
-    private final ModelMapper modelMapper;
+    private final MapperToCommentDto mapperToCommentDto;
     private final PostService postService;
 
 
@@ -36,8 +37,8 @@ public class CommentService {
 
         comment.setDeleted(false);
         comment.setCommentType(commentDto.getCommentType());
-        comment.setTime(LocalDateTime.now());
-        comment.setTimeChanged(LocalDateTime.now());
+        comment.setTime(commentDto.getTime().toLocalDateTime());
+        comment.setTimeChanged(commentDto.getTimeChanged().toLocalDateTime());
         comment.setAuthorId(commentDto.getAuthorId());
         comment.setParentId(commentDto.getParentId());
         comment.setCommentText(commentDto.getCommentText());
@@ -47,11 +48,11 @@ public class CommentService {
         comment.setMyLike(commentDto.isMyLike());
         comment.setCommentsCount(commentDto.getCommentsCount());
         comment.setImagePath(commentDto.getImagePath());
-        commentRepository.save(comment);
+        Comment newComment = commentRepository.save(comment);
         /* увеличить количество комментов в посте*/
         postService.changeCommentCountOrLikeAmount(idPost, Operator.PLUS, Item.COUNT_COMMENTS);
 
-        return modelMapper.map(comment, CommentDto.class);
+        return mapperToCommentDto.getCommentDto(newComment);
     }
 
     public List<CommentDto> getCommentsByIdPost(Long idPost, Pageable pageable) {
@@ -61,8 +62,7 @@ public class CommentService {
         if (listComments.isEmpty()) {
             return new ArrayList<>();
         }
-
-        return listComments.stream().map(item -> modelMapper.map(item, CommentDto.class)).collect(Collectors.toList());
+        return listComments.stream().map(mapperToCommentDto::getCommentDto).toList();
 
     }
 
